Non-DRI builds broken by recent cleanups in Mesa core
A series of recent commits by @ajax (for example: 78dfab95) break non-DRI builds.
When I configure Mesa in the following way:
meson --buildtype=release -Dglx=gallium-xlib -Dosmesa=true -Dvulkan-drivers= -Ddri-drivers= -Dgallium-drivers=swrast -Dplatforms=x11 -Dgallium-omx=disabled --prefix=
pwd/../install-mesa build-llvmpipe
The build fails in libglx. DRI build work OK. The same build worked before those cleanup commits.
Is this a configuration we care about?