gallium/xlib: Fix for recent gl_config changes

This mirrors the changes needed elsewhere for parts of !9817:

Fixes: 4daef7ffe37 mesa: Remove redundant gl_config::sampleBuffers
Fixes: 4fbe1cbe4cc mesa: Stop tracking visual rating in gl_config
Fixes: d21b8afa3de mesa: Remove the pretense of aux buffer support
Fixes: 78dfab95b80 mesa: Remove unused gl_config::level
Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/4544
Acked-by: Eric Anholt <eric@anholt.net>
Tested-by: Jan Zielinski <jan.zielinski@intel.com>
Acked-by: Jan Zielinski <jan.zielinski@intel.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/10050>